@@ -4,7 +4,14 @@ header{
     margin: auto;
     padding: 30px 0px;
 }
-
+/* .headerWrapper .fixed{
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    width: 100%;
+    z-index: 1000;
+    background: #fff;
+} */
 header .headerSearch {
     width: 100%;
     height: 50px;
