@@ -20,23 +20,24 @@ import Nav from './nav/nav';
 
 
 
+
 const Header = () => {
 
   const [isOpenDropDown, setisOpenDropDown] = useState(false);
+  // const headerRef = useRef();
 
 
-// useEffect(()=>{
-//   window.addEventListener("scroll",()=>{
-//     let position = window.pageYOffset;
-//     if(position>100){
-//       headerRef.current.classList.add('fixed')
-//     }else{
-//       headerRef.current.classList.remove('fixed')
-//     }
-//   })
-// },[])
+  // useEffect(() => {
+  //   window.addEventListener("scroll", () => {
+  //     let position = window.pageYOffset;
+  //     if (position > 100) {
+  //       headerRef.current.classList.add('fixed');
+  //     } else {
+  //       headerRef.current.classList.remove('fixed');
+  //     }
+  //   });
+  // }, []);
 
-// some changea here #7 28:23
   return (
     <>
       <header>
